# bagtag.aero

./: .env.example  .gitignore  .prettierignore  .prettierrc  Containerfile  DATA.md  LICENSE  README.md  entrypoint.sh  justfile  package.json  pyproject.toml
.github/workflows/: ci.yml
memory/: MEMORY.md  feedback_use_uv.md
src/: config.py  database.py  demo.py  exceptions.py  main.py
src/auth/: config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/bags/: constants.py  dependencies.py  exceptions.py  models.py  public_router.py  router.py  schemas.py  service.py
src/notifications/: models.py  router.py  service.py
src/packing/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  seed.py  service.py
src/trips/: constants.py  dependencies.py  exceptions.py  fr24.py  models.py  router.py  schemas.py  service.py
templates/: base.html  base_landing.html  dashboard.html  landing.html
templates/auth/: login.html  register.html
templates/bags/: detail.html  form.html  index.html
templates/notifications/: index.html
templates/packing/: template_detail.html  template_form.html  templates.html
templates/public/: bag.html  not_found.html
templates/trips/: checkin.html  collect.html  detail.html  form.html  index.html
tests/: conftest.py  test_auth.py  test_bags.py  test_notifications.py  test_packing.py  test_public.py  test_trips.py
