[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bagtag-aero"
version = "0.1.0"
description = "Track your luggage and travel — bagtag.aero"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "pyjwt>=2.9",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "bandit>=1.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "httpx>=0.27",
]

[tool.uv]
exclude-newer = "7 days"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
source = ["src"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
